# opengm-quickstart

./: .gitignore  00_simple_model.cxx  CMakeLists.txt
c++/: 00_simple_model.cxx  01_simple_model_double.cxx  02_simple_model_min_sum.cxx  03_simple_markov.fg  CMakeLists.txt
python/: 00_simple_model.ipynb
python/opengm/: 00_simple_model.ipynb  01_image_denoising.ipynb
python/pgmpy/: 00_simple_markov_model.ipynb
